--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
   <div class="container">
     <h1>Medical Cyber Physical Systems Workshop 2013</h1>
     <p class="lead">Medical Device Interoperability, Safety, and Security Assurance</p>
+    <p class="lead">April 8th 2013, Philadelphia USA</p>
     <!--<p>MLE+ is an open-source Matlab/Simulink toolbox for co-simulation with the whole-building energy simulator EnergyPlus. It is designed for engineers and researchers who are familiar with Matlab and Simulink and want to use these software tools in building energy simulation.</p>-->
     
     <!-- <p class="lead">MLE+ is a tool for energy-efficient building automation design, co-simulation and analysis.</p> --> 
