--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             </div>
             
              <h3>Full Papers</h3>
-             <ul style="li { margin-bottom: 1ex }">
+             <ul style="li { margin-bottom: 10px }">
              	<li><i>Towards Formal Verification Methods for Robotic Lower-Limb Prostheses and Orthoses</i>,<br>
              	Robert D. Gregg, UT Dallas; Ufuk Topcu, University of Pennsylvania</li>
              	
