--- a/index.html
+++ b/index.html
@@ -219,8 +219,8 @@
             </div>
             
              <h3>Full Papers</h3>
-             <ul style="li { margin-bottom: 10px }">
-             	<li><i>Towards Formal Verification Methods for Robotic Lower-Limb Prostheses and Orthoses</i>,<br>
+             <ul style="li { margin-bottom: 10px; }">
+             	<li style="margin-bottom: 10px;"><i>Towards Formal Verification Methods for Robotic Lower-Limb Prostheses and Orthoses</i>,<br>
              	Robert D. Gregg, UT Dallas; Ufuk Topcu, University of Pennsylvania</li>
              	
               	<li><i>Literature Review of Testing Techniques for Medical Device Software</i>,<br>
