--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <!-- Docs nav
     ================================================== -->
     <div class="row">
-      <div class="span3 bs-docs-sidebar" style="margin-right: 30px;">
+      <div class="span3 bs-docs-sidebar" style="padding-right: 30px;">
 	<ul class="nav nav-list bs-docs-sidenav">
         <!-- <ul class="nav nav-list bs-docs-sidenav affix"> -->
           
