--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <!-- Navbar                                                                                                                                                                      
     ================================================== -->
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-inverse navbar-fixed-top" style="right-margin: 20px">
       <div class="navbar-inner">
         <div class="container">
           <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
