--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <!-- Navbar                                                                                                                                                                      
     ================================================== -->
-    <div class="navbar navbar-inverse navbar-fixed-top" style="right-margin: 20px">
+    <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
           <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -93,6 +93,7 @@
 	  <!--<li><a href="#testCases"><i class="icon-chevron-right"></i> Test Cases</a></li>
           <li><a href="#development"><i class="icon-chevron-right"></i> Development</a></li>-->
         </ul>
+      </div>
       </div>
       
       <div class="span9">
