--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
 </header>
 
 
-  <div class="container">
-
     <!-- Docs nav
     ================================================== -->
-    <div class="row">
-      <div class="span2 bs-docs-sidebar">
+  <div class="container-fluid">
+    <div class="row-fluid">
+      <div class="span3">
+      	<div class="well sidebar-nav">
 	<ul class="nav nav-list bs-docs-sidenav">
         <!-- <ul class="nav nav-list bs-docs-sidenav affix"> -->
           
@@ -93,6 +93,7 @@
 	  <!--<li><a href="#testCases"><i class="icon-chevron-right"></i> Test Cases</a></li>
           <li><a href="#development"><i class="icon-chevron-right"></i> Development</a></li>-->
         </ul>
+      </div>
       </div>
       </div>
       </div>
