--- a/index.html
+++ b/index.html
@@ -93,10 +93,8 @@
 	  <!--<li><a href="#testCases"><i class="icon-chevron-right"></i> Test Cases</a></li>
           <li><a href="#development"><i class="icon-chevron-right"></i> Development</a></li>-->
         </ul>
-      </div>
-      </div>
-      </div>
-      </div>
+      </div> <!-- well -->
+      </div> <!-- span3 -->
       
       <div class="span9">
         
