--- a/index.html
+++ b/index.html
@@ -13,6 +13,25 @@
     <link href="assets/css/docs.css" rel="stylesheet">
     <link href="assets/js/google-code-prettify/prettify.css" rel="stylesheet">
 
+    <style type="text/css">
+      body {
+        padding-top: 60px;
+        padding-bottom: 40px;
+      }
+      .sidebar-nav {
+        padding: 9px 0;
+      }
+
+      @media (max-width: 980px) {
+        /* Enable use of floated navbar text */
+        .navbar-text.pull-right {
+          float: none;
+          padding-left: 5px;
+          padding-right: 5px;
+        }
+      }
+    </style>
+
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>                                                                                                                                                                
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>                                                                                                     
@@ -70,7 +89,6 @@
   <div class="container-fluid">
     <div class="row-fluid">
       <div class="span3">
-      	<div class="well sidebar-nav">
 	<ul class="nav nav-list bs-docs-sidenav">
         <!-- <ul class="nav nav-list bs-docs-sidenav affix"> -->
           
@@ -84,7 +102,6 @@
           <li class=""><a href="#cfp"><i class="icon-chevron-right"></i> Call for Paper</a></li>
           <li class=""><a href="#committee"><i class="icon-chevron-right"></i> Workshop Committee</a></li>
         </ul>
-      </div> <!-- well -->
       </div> <!-- span3 -->
       
       <div class="span9">
