--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
           <li class=""><a href="#publication"><i class="icon-chevron-right"></i>Accepted Papers</a></li>
           <li class=""><a href="#cfp"><i class="icon-chevron-right"></i> Call for Paper</a></li>
           <li class=""><a href="#committee"><i class="icon-chevron-right"></i> Workshop Committee</a></li>
+          <li class=""><a href="#participants"><i class="icon-chevron-right"></i> Workshop Participants</a></li>
         </ul>
       </div> <!-- span3 -->
       
@@ -341,7 +342,186 @@
       </div>
     </div>
   </div>
-
+<section id="participants">
+          <div class="row">
+            <div class="page-header">
+              <h1>Workshop Participants</h1>
+              <table width="800" border="1">
+                <tr>
+                  <th width="186" scope="col">First Name</th>
+                  <th width="170" scope="col">Last Name</th>
+                  <th width="422" scope="col">Affiliation</th>
+                </tr>
+                <tr>
+                  <td>Bharadwaj</td>
+                  <td>Amrutur</td>
+                  <td>Indian Institute of Science</td>
+                </tr>
+                <tr>
+                  <td>Ayan</td>
+                  <td>Banerjee</td>
+                  <td>Arizona State University</td>
+                </tr>
+                <tr>
+                  <td>Mukesh Kumar</td>
+                  <td>Chippa</td>
+                  <td>The University of Akron</td>
+                </tr>
+                <tr>
+                  <td>Giuseppe</td>
+                  <td>Cicala</td>
+                  <td>University of Genoa - DIBRIS</td>
+                </tr>
+                <tr>
+                  <td>Goran</td>
+                  <td>Frehse</td>
+                  <td>Grenoble University / Verimag</td>
+                </tr>
+                <tr>
+                  <td>Robert</td>
+                  <td> Gregg </td>
+                  <td>Rehabilitation Institute of Chicago</td>
+                </tr>
+                <tr>
+                  <td>Sandeep</td>
+                  <td>Gupta</td>
+                  <td>Arizona State University</td>
+                </tr>
+                <tr>
+                  <td>Min Yang</td>
+                  <td> Jung </td>
+                  <td>Johns Hopkins University</td>
+                </tr>
+                <tr>
+                  <td>Yanni</td>
+                  <td>Kourkoulas </td>
+                  <td>JHU/Applied Physics Laboratory</td>
+                </tr>
+                <tr>
+                  <td>Venkat</td>
+                  <td>Krovi</td>
+                  <td>SUNY Buffalo</td>
+                </tr>
+                <tr>
+                  <td>Insup</td>
+                  <td>Lee</td>
+                  <td>University of Pennsylvania</td>
+                </tr>
+                <tr>
+                  <td>Paul</td>
+                  <td>Jones</td>
+                  <td>FDA</td>
+                </tr>
+                <tr>
+                  <td>Mehdi</td>
+                  <td>Maasoumy</td>
+                  <td>University of California, Berkeley</td>
+                </tr>
+                <tr>
+                  <td>John</td>
+                  <td>Majikes</td>
+                  <td>North Carolina State University</td>
+                </tr>
+                <tr>
+                  <td>Oded</td>
+                  <td>Maler</td>
+                  <td>CNRS-Verimag</td>
+                </tr>
+                <tr>
+                  <td>Rahul</td>
+                  <td>Mangharam </td>
+                  <td>University of Pennsylvania</td>
+                </tr>
+                <tr>
+                  <td>Dugki</td>
+                  <td>Min</td>
+                  <td>Konkuk University</td>
+                </tr>
+                <tr>
+                  <td>Salar</td>
+                  <td>Moarref</td>
+                  <td>University of Pennsylvania</td>
+                </tr>
+                <tr>
+                  <td>Berney</td>
+                  <td>Montavon</td>
+                  <td>Cleveland State University</td>
+                </tr>
+                <tr>
+                  <td>Anitha</td>
+                  <td>Murugesan</td>
+                  <td>University of Minnesota - Twin Cities</td>
+                </tr>
+                <tr>
+                  <td>Lijun</td>
+                  <td>Qian</td>
+                  <td>PVAMU, Texas A&amp;M University System</td>
+                </tr>
+                <tr>
+                  <td>Hassan </td>
+                  <td>Salamy</td>
+                  <td>Texas State University</td>
+                </tr>
+                <tr>
+                  <td>Sanjit</td>
+                  <td>Seshia </td>
+                  <td>UC Berkeley</td>
+                </tr>
+                <tr>
+                  <td>Dan</td>
+                  <td>Simon</td>
+                  <td>Cleveland State University</td>
+                </tr>
+                <tr>
+                  <td>Oleg</td>
+                  <td>Sokolsky</td>
+                  <td>University of Pennsylvania</td>
+                </tr>
+                <tr>
+                  <td>Armando</td>
+                  <td>Tacchella </td>
+                  <td>University of Genoa - DIBRIS</td>
+                </tr>
+                <tr>
+                  <td>George</td>
+                  <td>Thomas</td>
+                  <td>Cleveland State University</td>
+                </tr>
+                <tr>
+                  <td>Pietro</td>
+                  <td>Valdastri</td>
+                  <td>Vanderbilt University</td>
+                </tr>
+                <tr>
+                  <td>Krishna</td>
+                  <td>Venkatasubramanian</td>
+                  <td>Worcester Polytechnic Institute</td>
+                </tr>
+                <tr>
+                  <td>Sandy</td>
+                  <td>Weininger</td>
+                  <td>FDA</td>
+                </tr>
+                <tr>
+                  <td>Mark</td>
+                  <td>Yampolskiy </td>
+                  <td>Vanderbilt University</td>
+                </tr>
+                <tr>
+                  <td>Xu</td>
+                  <td>Zhang</td>
+                  <td> Illinois Institute of Technology</td>
+                </tr>
+                <tr>
+                  <td>Yi</td>
+                  <td> Zhang</td>
+                  <td>FDA</td>
+                </tr>
+              </table>
+              <p>&nbsp;</p>
+            </div>
+          </div> 
+        </section>
 
 
     <!-- Footer
