--- a/index.html
+++ b/index.html
@@ -746,7 +746,7 @@
                   <td class=xl6826237 width=110 style='border-top:none;border-left:none;
   width:58pt'>33 (0) 456 52 03 74</td>
                 </tr>
-                
+                <![if supportMisalignedColumns]>
                 <tr height=0 style='display:none'>
                   <td width=71 style='width:44pt'></td>
                   <td width=79 style='width:47pt'></td>
@@ -756,7 +756,7 @@
                   <td width=190 style='width:48pt'></td>
                   <td width=110 style='width:58pt'></td>
                 </tr>
-                
+                <![endif]>
               </table>
               <p>&nbsp;</p>
             </div>
