--- a/index.html
+++ b/index.html
@@ -216,8 +216,67 @@
 <section id="program">
           <div class="row">
             <div class="page-header">
-              <h1>Technical Program</h1>
-              <p>Printed proceedings of the workshop will be distributed at the venue. A   PDF version of the proceedings will be posted on this site. </p>
+              <h1>Technical Program <a href="http://www.seas.upenn.edu/~zhihaoj/MCPS13_WorkshopProgram.pdf" target="_blank">(pdf)</a></h1>
+              <p><strong>8:50 - 9:00 am: </strong><em>Welcome  and Kick-off</em></p>
+              <p><strong>9:00 - 10:00 am: </strong><em>Keynote</em> - <strong>Robotic Surgery: Quo vadis? </strong><br>
+                Dr. Pankaj  Singhal, <br>
+                Chief, Division of  Minimally Invasive &amp; Robotic Surgery, University at Buffalo<br>
+                Abstract and Bio </p>
+              <div>
+                <p><strong>10-10.30 am: </strong>Coffee break</p>
+              </div>
+              <p><strong>10:30 - 12:00 pm:</strong> Session I          <br>
+                <br>
+  <em>Invited Talk</em>: <strong>Update on MD PnP program collaboration resources</strong>, <br>
+                Dr. Julian M. Goldman, MD. <br>
+                Dr. Goldman practices clinical anesthesia in the Massachusetts  General Hospital Operating  Room of the Future, serves as Medical Director of Partners HealthCare  Biomedical Engineering, and leads the Medical Device Plug-and-Play  Interoperability Program at the Center for Integration of Medicine &amp;  Innovative Technology (CIMIT/MGH). </p>
+              <p><a href="http://www.seas.upenn.edu/~zhihaoj/cps13/Montavon.pdf"><strong>Biogeography-Based Optimization for Hydraulic Prosthetic Knee  Control</strong></a><strong> </strong><br>
+                Tim Wilmot, George Thomas, Berney Montavon, Rick Rarick, Antonie van  den Bogert, Steve Szatmary, and Dan Simon, Cleveland State University; William  Smith and Sergey Samorezov, Cleveland Clinic</p>
+              <p><a href="http://www.seas.upenn.edu/~zhihaoj/cps13/Gregg.pdf"><strong>Towards Formal Verification Methods for Robotic Lower-Limb  Prostheses and Orthoses</strong></a><strong> </strong><br>
+                Robert D. Gregg, UT Dallas; Ufuk Topcu, University of Pennsylvania </p>
+              <p><a href="http://www.seas.upenn.edu/~zhihaoj/cps13/Kazanzides.pdf"><strong>Run-time Safety Framework for Component-based Medical Robots</strong></a><strong>,</strong><br>
+                Min  Yan Jung, Peter Kazanzides, Johns Hopkins University <br>
+              </p>
+              <div>
+                <p><strong>12:00 - 1:00 pm: </strong>Lunch</p>
+              </div>
+              <p><strong>1:00 - 3:00 pm: </strong>Session II</p>
+              <p><em>Invited  Talk: </em><strong>Cardiac  resynchronization therapy: success and challenges</strong> <br>
+                Dr. Larisa Tereshchenko, MD,  Johns Hopkins Hospital, Cardiac Electrophysiology. <br>
+                Abstract and Bio </p>
+              <p><em>Invited Talk: </em><strong>Thoughts on Assurance Cases</strong> <br>
+                Paul L. Jones, US FDA. <br>
+                Paul Jones is a Senior Systems/Software  Engineer in the Office of Science and Engineering Laboratories at the US Food  and Drug Administration.</p>
+              <p>&nbsp;</p>
+              <p><a href="http://www.seas.upenn.edu/~zhihaoj/cps13/simalatsar.pdf"><strong>A  Control Flow Prototype for a Dose Recommending Device for Chronic Myeloid  Leukemia Patients</strong></a><strong> </strong><br>
+                Alena Simalatsar, Wenqi You, Dechao Sun, Giovanni De Micheli EPFL;  Verena Gotta, University of Laussane and Geneva; Nicolas Widmer, University of  Lausanne<br>
+                <br>
+  <a href="http://www.seas.upenn.edu/~zhihaoj/cps13/Murugesan.pdf"><strong>Using Models to Address Challenges in Specifying Requirements  for Medical Cyber-Physical Systems</strong></a>Anitha Murugesan, Sanjai Rayadurgam, Mats Heimdahl,  University of Minnesota<br>
+                <br>
+  <a href="http://www.seas.upenn.edu/~zhihaoj/cps13/Majikes.pdf"><strong>Literature Review of Testing Techniques for Medical Device  Software</strong></a><strong> </strong><br>
+                John J. Majikes, Rahul Pandita, Tao Xie, North Carolina State  University</p>
+              <p>&nbsp;</p>
+              <div>
+                <p><strong>3:30 - 3:30 pm: </strong>Coffee break</p>
+              </div>
+              <p>&nbsp;</p>
+              <p><strong>3:30 - 4:45 pm: </strong><em>Medical  CPS Panel</em><br>
+                <strong>R&amp;D  and Regulatory Challenges for Medical Devices in the Future</strong></p>
+              <ul>
+                <li>John  Komp, Medtronic</li>
+                <li>Michael  Kremliovsky, Hospira</li>
+                <li>Sandy  Weininger, FDA</li>
+                <li>Dr.  Larisa Tereshchenko, Johns Hopkins Medical Institutes</li>
+                <li>Dr. Pankaj Singhal, School of Medicine and Biomedical  Sciences, University at Buffalo</li>
+              </ul>
+              <p>&nbsp;</p>
+              <p><strong>4:45 - 5:30 pm: </strong><em>Poster  Session</em> <br>
+                2 minute poster overviews      </p>
+              <p><strong>&nbsp;</strong></p>
+              <p><strong>5:30 - 6:00 pm: </strong><em>Final  Comments</em></p>
+              <div>
+                <p><strong>6:00 pm: </strong>Workshop Ends</p>
+              </div>
             </div>
           </div> 
          </section>
