--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
               <p><strong>9:00 - 10:00 am: </strong><em>Keynote</em> - <strong>Robotic Surgery: Quo vadis? </strong><br>
                 Dr. Pankaj  Singhal, <br>
                 Chief, Division of  Minimally Invasive &amp; Robotic Surgery, University at Buffalo<br>
-                Abstract and Bio </p>
+                <a href="http://www.seas.upenn.edu/~zhihaoj/Keynote.pdf" target="_blank">Abstract and Bio </a></p>
               <div>
                 <p><strong>10-10.30 am: </strong>Coffee break</p>
               </div>
@@ -243,7 +243,7 @@
               <p><strong>1:00 - 3:00 pm: </strong>Session II</p>
               <p><em>Invited  Talk: </em><strong>Cardiac  resynchronization therapy: success and challenges</strong> <br>
                 Dr. Larisa Tereshchenko, MD,  Johns Hopkins Hospital, Cardiac Electrophysiology. <br>
-                Abstract and Bio </p>
+                <a href="http://www.seas.upenn.edu/~zhihaoj/LT.pdf" target="_blank">Abstract and Bio </a></p>
               <p><em>Invited Talk: </em><strong>Thoughts on Assurance Cases</strong> <br>
                 Paul L. Jones, US FDA. <br>
                 Paul Jones is a Senior Systems/Software  Engineer in the Office of Science and Engineering Laboratories at the US Food  and Drug Administration.</p>
