--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active">
-                <a href="./workshop.html">Home</a> <!-- ./index.html-->
+                <a href="http://medcps.org">Home</a> <!-- ./index.html-->
               </li>
             </ul>
           </div>
@@ -77,6 +77,7 @@
     <h1>Medical Cyber Physical Systems Workshop 2013</h1>
     <p class="lead">Medical Device Interoperability, Safety, and Security Assurance</p>
     <p class="lead">April 8th 2013, Philadelphia USA</p>
+    <a href="http://eepurl.com/rGEUj" target="_blank" class="btn btn-primary btn-large">PDF &raquo;</a> <a class="lead" href="http://www.seas.upenn.edu/~zhihaoj/MCPS13_WorkshopProgram.pdf">  Technical Program</a></p>
     <!--<p>MLE+ is an open-source Matlab/Simulink toolbox for co-simulation with the whole-building energy simulator EnergyPlus. It is designed for engineers and researchers who are familiar with Matlab and Simulink and want to use these software tools in building energy simulation.</p>-->
     
     <!-- <p class="lead">MLE+ is a tool for energy-efficient building automation design, co-simulation and analysis.</p> --> 
@@ -235,10 +236,12 @@
               <p><a href="http://www.seas.upenn.edu/~zhihaoj/cps13/Gregg.pdf"><strong>Towards Formal Verification Methods for Robotic Lower-Limb  Prostheses and Orthoses</strong></a><strong> </strong><br>
                 Robert D. Gregg, UT Dallas; Ufuk Topcu, University of Pennsylvania </p>
               <p><a href="http://www.seas.upenn.edu/~zhihaoj/cps13/Kazanzides.pdf"><strong>Run-time Safety Framework for Component-based Medical Robots</strong></a><strong>,</strong><br>
-                Min  Yan Jung, Peter Kazanzides, Johns Hopkins University <br>
+              Min  Yan Jung, Peter Kazanzides, Johns Hopkins University </p>
+              <p><br>
               </p>
               <div>
                 <p><strong>12:00 - 1:00 pm: </strong>Lunch</p>
+                <p>&nbsp;</p>
               </div>
               <p><strong>1:00 - 3:00 pm: </strong>Session II</p>
               <p><em>Invited  Talk: </em><strong>Cardiac  resynchronization therapy: success and challenges</strong> <br>
@@ -274,6 +277,7 @@
                 2 minute poster overviews      </p>
               <p><strong>&nbsp;</strong></p>
               <p><strong>5:30 - 6:00 pm: </strong><em>Final  Comments</em></p>
+              <p>&nbsp;</p>
               <div>
                 <p><strong>6:00 pm: </strong>Workshop Ends</p>
               </div>
@@ -398,312 +402,176 @@
           <div class="row">
             <div class="page-header">
               <h1>Workshop Participants</h1>
-              <table width="1184" border="1">
+              <table width="882" border="1">
                 <tr>
-                  <th width="140" scope="col">Workshop</th>
-                  <th width="150" scope="col">Number</th>
                   <th width="158" scope="col">First Name</th>
                   <th width="240" scope="col">Last Name</th>
                   <th width="462" scope="col">Affiliation</th>
-                  <th width="462" scope="col">Email</th>
-                  <th width="462" scope="col">Tel</th>
                 </tr>
                 <tr>
-                  <td>W9</td>
-                  <td>53313689</td>
                   <td>Bharadwaj</td>
                   <td>Amrutur</td>
                   <td>Indian Institute of Science</td>
-                  <td>amrutur@ece.iisc.ernet.in</td>
-                  <td>+919886054723</td>
                 </tr>
                 <tr>
-                  <td>W9</td>
-                  <td>53128247</td>
                   <td>Ayan</td>
                   <td>Banerjee</td>
                   <td>Arizona State University</td>
-                  <td>abanerj3@asu.edu</td>
-                  <td>4802789137</td>
                 </tr>
                 <tr>
-                  <td>W9</td>
-                  <td>53443251</td>
                   <td>Mukesh Kumar</td>
                   <td>Chippa</td>
                   <td>The University of Akron</td>
-                  <td>mc80@zips.uakron.edu</td>
-                  <td>3307805085</td>
                 </tr>
                 <tr>
-                  <td>W9</td>
-                  <td>53212611</td>
                   <td>Giuseppe</td>
                   <td>Cicala</td>
                   <td>University of Genoa - DIBRIS</td>
-                  <td>giuseppe.cicala@unige.it</td>
-                  <td>+390103532946</td>
                 </tr>
                 <tr>
-                  <td>W9</td>
-                  <td>51986414</td>
                   <td>Goran</td>
                   <td>Frehse</td>
                   <td>Grenoble University / Verimag</td>
-                  <td>goran.frehse@imag.fr</td>
-                  <td>+33 4 56 52 03 77</td>
                 </tr>
                 <tr>
-                  <td>W9</td>
-                  <td>53381165</td>
                   <td>Robert</td>
                   <td> Gregg </td>
                   <td>Rehabilitation Institute of Chicago</td>
-                  <td>bobby.gregg@gmail.com</td>
-                  <td>5108729096</td>
                 </tr>
                 <tr>
-                  <td>W9</td>
-                  <td>53456369</td>
                   <td>Sandeep</td>
                   <td>Gupta</td>
                   <td>Arizona State University</td>
-                  <td>sandeep.gupta@asu.edu</td>
-                  <td>480-965-3806</td>
                 </tr>
                 <tr>
-                  <td>W9</td>
-                  <td>53424822</td>
                   <td>Min Yang</td>
                   <td> Jung </td>
                   <td>Johns Hopkins University</td>
-                  <td>myj@jhu.edu</td>
-                  <td>443-683-5919</td>
                 </tr>
                 <tr>
-                  <td>W9</td>
-                  <td>52205669</td>
                   <td>Yanni</td>
                   <td>Kourkoulas </td>
                   <td>JHU/Applied Physics Laboratory</td>
-                  <td>yanni.koukoulas@jhuapl.edu</td>
-                  <td>443-778-5397</td>
                 </tr>
                 <tr>
-                  <td>W9</td>
-                  <td>53325775</td>
                   <td>Venkat</td>
                   <td>Krovi</td>
                   <td>SUNY Buffalo</td>
-                  <td>vkrovi@buffalo.edu</td>
-                  <td>7166451430</td>
                 </tr>
                 <tr>
-                  <td>W9</td>
-                  <td>53366918</td>
                   <td>Insup</td>
                   <td>Lee</td>
                   <td>University of Pennsylvania</td>
-                  <td>lee@cis.upenn.edu</td>
-                  <td>215 898-3532</td>
                 </tr>
                 <tr>
-                  <td>W9</td>
-                  <td>53856021</td>
                   <td>Paul</td>
                   <td>Jones</td>
                   <td>FDA</td>
-                  <td>paul.jones@fda.hhs.gov</td>
-                  <td>3017962586</td>
                 </tr>
                 <tr>
-                  <td>W9</td>
-                  <td>52452541</td>
                   <td>Mehdi</td>
                   <td>Maasoumy</td>
                   <td>University of California, Berkeley</td>
-                  <td>mehdi@me.berkeley.edu</td>
-                  <td>5105088258</td>
                 </tr>
                 <tr>
-                  <td>W9</td>
-                  <td>53399927</td>
                   <td>John</td>
                   <td>Majikes</td>
                   <td>North Carolina State University</td>
-                  <td>jjmajike@ncsu.edu</td>
-                  <td>9193694186</td>
                 </tr>
                 <tr>
-                  <td>W9</td>
-                  <td>53381944</td>
                   <td>Oded</td>
                   <td>Maler</td>
                   <td>CNRS-Verimag</td>
-                  <td>Oded.Maler@imag.fr</td>
-                  <td>33 (0) 456 52 03 74</td>
                 </tr>
                 <tr>
-                  <td>W9</td>
-                  <td>53368420</td>
                   <td>Rahul</td>
                   <td>Mangharam </td>
                   <td>University of Pennsylvania</td>
-                  <td>rahulm@seas.upenn.edu</td>
-                  <td>2155733636</td>
                 </tr>
                 <tr>
-                  <td>W9</td>
-                  <td>53419766</td>
                   <td>Dugki</td>
                   <td>Min</td>
                   <td>Konkuk University</td>
-                  <td>dkmin@konkuk.ac.kr</td>
-                  <td>+82-2-450-3490</td>
                 </tr>
                 <tr>
-                  <td>W9</td>
-                  <td>52939039</td>
                   <td>Salar</td>
                   <td>Moarref</td>
                   <td>University of Pennsylvania</td>
-                  <td>moarref@seas.upenn.edu</td>
-                  <td>2154073247</td>
                 </tr>
                 <tr>
-                  <td>W9</td>
-                  <td>53414674</td>
                   <td>Berney</td>
                   <td>Montavon</td>
                   <td>Cleveland State University</td>
-                  <td>montavon.berney@gmail.com</td>
-                  <td>440-339-7837</td>
                 </tr>
                 <tr>
-                  <td>W9</td>
-                  <td>53445524</td>
                   <td>Anitha</td>
                   <td>Murugesan</td>
                   <td>University of Minnesota - Twin Cities</td>
-                  <td>anitha@cs.umn.edu</td>
-                  <td>6126269742</td>
                 </tr>
                 <tr>
-                  <td>W9</td>
-                  <td>53233952</td>
                   <td>Lijun</td>
                   <td>Qian</td>
                   <td>PVAMU, Texas A&amp;M University System</td>
-                  <td>liqian@pvamu.edu</td>
-                  <td>9362619908</td>
                 </tr>
                 <tr>
-                  <td>W9</td>
-                  <td>53390900</td>
                   <td>Hassan </td>
                   <td>Salamy</td>
                   <td>Texas State University</td>
-                  <td>hsalamy@gmail.com</td>
-                  <td>5123954880</td>
                 </tr>
                 <tr>
-                  <td>W9</td>
-                  <td>53395450</td>
                   <td>Sanjit</td>
                   <td>Seshia </td>
                   <td>UC Berkeley</td>
-                  <td>sseshia@eecs.berkeley.edu</td>
-                  <td>510-643-6968</td>
                 </tr>
                 <tr>
-                  <td>W9</td>
-                  <td>53352268</td>
                   <td>Dan</td>
                   <td>Simon</td>
                   <td>Cleveland State University</td>
-                  <td>d.j.simon@csuohio.edu</td>
-                  <td>216-687-5407</td>
                 </tr>
                 <tr>
-                  <td>W9</td>
-                  <td>53335308</td>
                   <td>Oleg</td>
                   <td>Sokolsky</td>
                   <td>University of Pennsylvania</td>
-                  <td>sokolsky@cis.upenn.edu</td>
-                  <td>215-898-4448</td>
                 </tr>
                 <tr>
-                  <td>W9</td>
-                  <td>53212613</td>
                   <td>Armando</td>
                   <td>Tacchella </td>
                   <td>University of Genoa - DIBRIS</td>
-                  <td>armando.tacchella@unige.it</td>
-                  <td>00390103532782</td>
                 </tr>
                 <tr>
-                  <td>W9</td>
-                  <td>53437679</td>
                   <td>George</td>
                   <td>Thomas</td>
                   <td>Cleveland State University</td>
-                  <td>g.l.thomas71@csuohio.edu</td>
-                  <td>2162558848</td>
                 </tr>
                 <tr>
-                  <td>W9</td>
-                  <td>53201649</td>
                   <td>Pietro</td>
                   <td>Valdastri</td>
                   <td>Vanderbilt University</td>
-                  <td>p.valdastri@vanderbilt.edu</td>
-                  <td>6154266907</td>
                 </tr>
                 <tr>
-                  <td>W9</td>
-                  <td>53392392</td>
                   <td>Krishna</td>
                   <td>Venkatasubramanian</td>
                   <td>Worcester Polytechnic Institute</td>
-                  <td>kven@wpi.edu</td>
-                  <td>508 831 6571</td>
                 </tr>
                 <tr>
-                  <td>W9</td>
-                  <td>53861716</td>
                   <td>Sandy</td>
                   <td>Weininger</td>
                   <td>FDA</td>
-                  <td>sandy.weininger@fda.hhs.gov</td>
-                  <td>3017962582</td>
                 </tr>
                 <tr>
-                  <td>W9</td>
-                  <td>52900665</td>
                   <td>Mark</td>
                   <td>Yampolskiy </td>
                   <td>Vanderbilt University</td>
-                  <td>myy@isis.vanderbilt.edu</td>
-                  <td>(615) 322-4954</td>
                 </tr>
                 <tr>
-                  <td>W9</td>
-                  <td>52618355</td>
                   <td>Xu</td>
                   <td>Zhang</td>
                   <td> Illinois Institute of Technology</td>
-                  <td>xzhan156@iit.edu</td>
-                  <td>13123401889</td>
                 </tr>
                 <tr>
-                  <td>W9</td>
-                  <td>53863492</td>
                   <td>Yi</td>
                   <td> Zhang</td>
                   <td>FDA</td>
-                  <td>Yi.zhang2@fda.hhs.gov</td>
-                  <td>301-796-2733</td>
                 </tr>
               </table>
               <p>&nbsp;</p>
