--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <h1>Medical Cyber Physical Systems Workshop 2013</h1>
     <p class="lead">Medical Device Interoperability, Safety, and Security Assurance</p>
     <p class="lead">April 8th 2013, Philadelphia USA</p>
-    <a href="http://eepurl.com/rGEUj" target="_blank" class="btn btn-primary btn-large">PDF &raquo;</a> <a class="lead" href="http://www.seas.upenn.edu/~zhihaoj/MCPS13_WorkshopProgram.pdf">  Technical Program</a></p>
+    <a href="http://www.seas.upenn.edu/~zhihaoj/MCPS13_WorkshopProgram.pdf" target="_blank" class="btn btn-primary btn-large">PDF &raquo;</a> <a class="lead" href="http://www.seas.upenn.edu/~zhihaoj/MCPS13_WorkshopProgram.pdf">  Technical Program</a></p>
     <!--<p>MLE+ is an open-source Matlab/Simulink toolbox for co-simulation with the whole-building energy simulator EnergyPlus. It is designed for engineers and researchers who are familiar with Matlab and Simulink and want to use these software tools in building energy simulation.</p>-->
     
     <!-- <p class="lead">MLE+ is a tool for energy-efficient building automation design, co-simulation and analysis.</p> --> 
@@ -576,9 +576,34 @@
                   <td> Illinois Institute of Technology</td>
                 </tr>
                 <tr>
+                  <td>Larisa</td>
+                  <td>Tereshchenko</td>
+                  <td>Johns Hopkins Hospital</td>
+                </tr>
+                <tr>
                   <td>Yi</td>
                   <td> Zhang</td>
                   <td>FDA</td>
+                </tr>
+                <tr>
+                  <td>Pankaj</td>
+                  <td>Singhal</td>
+                  <td>University at Buffalo    </td>
+                </tr>
+                <tr>
+                  <td>Julian</td>
+                  <td>Goldman</td>
+                  <td>Massachusetts General Hospital</td>
+                </tr>
+                <tr>
+                  <td>Michael </td>
+                  <td>Kremliovsky</td>
+                  <td>Hospira</td>
+                </tr>
+                <tr>
+                  <td>John</td>
+                  <td>Komp</td>
+                  <td>Medtronic</td>
                 </tr>
               </table>
               <p>&nbsp;</p>
