--- a/index.html
+++ b/index.html
@@ -605,6 +605,36 @@
                   <td>Komp</td>
                   <td>Medtronic</td>
                 </tr>
+                <tr>
+                  <td>Akihito</td>
+                  <td>Iwai</td>
+                  <td>DENSO CORPORATION</td>
+                </tr>
+                <tr>
+                  <td>Mark</td>
+                  <td>Klein</td>
+                  <td>Carnegie Mellon Software Engineering Institute</td>
+                </tr>
+                <tr>
+                  <td>HYUK-JUN</td>
+                  <td>LEE</td>
+                  <td>Sogang University</td>
+                </tr>
+                <tr>
+                  <td>Ernest</td>
+                  <td>Lucier</td>
+                  <td>NCO/NITRD</td>
+                </tr>
+                <tr>
+                  <td>Paolo</td>
+                  <td>Masci</td>
+                  <td>School of Electronic Engineering and Computer Science, Queen Mary University of London</td>
+                </tr>
+                <tr>
+                  <td>Tsunamichi</td>
+                  <td>Tsukidate</td>
+                  <td>Hitachi, Ltd., Hitachi Research Laboratory</td>
+                </tr>
               </table>
               <p>&nbsp;</p>
             </div>
