--- a/index.html
+++ b/index.html
@@ -635,6 +635,11 @@
                   <td>Tsukidate</td>
                   <td>Hitachi, Ltd., Hitachi Research Laboratory</td>
                 </tr>
+                <tr>
+                  <td>Ross </td>
+                  <td>Koppel</td>
+                  <td>Penn Sociology department</td>
+                </tr>
               </table>
               <p>&nbsp;</p>
             </div>
