--- a/index.html
+++ b/index.html
@@ -640,6 +640,11 @@
                   <td>Koppel</td>
                   <td>Penn Sociology department</td>
                 </tr>
+                <tr>
+                  <td>Paolo</td>
+                  <td>Masci </td>
+                  <td>Queen Mary University of London</td>
+                </tr>
               </table>
               <p>&nbsp;</p>
             </div>
