--- a/index.html
+++ b/index.html
@@ -266,6 +266,11 @@
                     <td>Hamburg Universtity of Technology</td>
                   </tr>
                   <tr>
+                    <td><a href="marta.kwiatkowska@cs.ox.ac.uk" target="_blank">Marta Kwiatkowska</a></td>
+                    <td></td>
+                    <td>University of Oxford</td>
+                  </tr>
+                  <tr>
                     <td width="214"><a href="http://www.seas.upenn.edu/~rahulm/" target="_blank">Rahul Mangharam</a></td>
                     <td width="10"></td>
                     <td width="355">University of Pennsylvania</td>
@@ -296,7 +301,52 @@
                   <tr>
                     <td>Sandy Weininger</td>
                     <td></td>
-                    <td>U.S. Food &amp; Drug Admin. (FDA)</td>
+                    <td><p>U.S. Food &amp; Drug Admin. (FDA)</p></td>
+                  </tr>
+                  <tr>
+                    <td>Martin Leucker</td>
+                    <td></td>
+                    <td><p>University of Lübeck, Germany</p></td>
+                  </tr>
+                  <tr>
+                    <td>Maria Lindén</td>
+                    <td></td>
+                    <td><p> Maladalen University, Sweden</p></td>
+                  </tr>
+                  <tr>
+                    <td>Vasiliki Sfyria</td>
+                    <td></td>
+                    <td><p>Viseo Research and Development, France</p></td>
+                  </tr>
+                  <tr>
+                    <td>Dominique Méry</td>
+                    <td></td>
+                    <td><p>LORIA, France</p></td>
+                  </tr>
+                  <tr>
+                    <td>Christain Renner</td>
+                    <td></td>
+                    <td><p>University of Lübeck, Germany</p></td>
+                  </tr>
+                  <tr>
+                    <td>José Maria Fernandes</td>
+                    <td></td>
+                    <td><p>IEETA, Portugal</p></td>
+                  </tr>
+                  <tr>
+                    <td>Sibylle Schupp</td>
+                    <td></td>
+                    <td><p>TUHH, Germany</p></td>
+                  </tr>
+                  <tr>
+                    <td>Alena Simalatsar</td>
+                    <td></td>
+                    <td><p>EPFL, Switzerland</p></td>
+                  </tr>
+                  <tr>
+                    <td>Stefan Fischer</td>
+                    <td></td>
+                    <td><p>University of Lübeck, Germany</p></td>
                   </tr>
                 </tbody>
               </table>
