--- a/index.html
+++ b/index.html
@@ -281,12 +281,12 @@
                 </tbody>
               </table>
               <h1>Workshop Steering Commttee</h1>
-              <table>
+              <table width="618">
                 <tbody>
                   <tr>
-                    <td width="223">Julian M. Goldman, MD</td>
-                    <td width="10"></td>
-                    <td width="304">Mass. General Hospital</td>
+                    <td width="180">Julian M. Goldman, MD</td>
+                    <td width="6"></td>
+                    <td width="333">Mass. General Hospital</td>
                   </tr>
                   <tr>
                     <td>Paul Jones</td>
