--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
             <div class="page-header">
               <h1>Submission</h1>
             </div>
-            <p>Please email your paper in PDF format to <em><strong>Marta Kwiatkowska: marta.kwiatkowska@cs.ox.ac.uk</strong> </em>
- Please use the corresponding author's last name as   the file name. Example: Venkatasubramanian.pdf. </p>
+            <p>Please email your paper in PDF format to <em><strong>Volker Turau: turau@tuhh.de, Marta Kwiatkowska: marta.kwiatkowska@cs.ox.ac.uk, Rahul Mangharam: rahulm@seas.upenn.edu</strong> </em>
+ Please use the corresponding author's last name as   the file name. Example: Turau.pdf. </p>
             <p>Papers should follow the two-column ACM Proceedings Format and be a maximum of eight (8) pages in length. Please refer to the <a href="http://www.acm.org/sigs/publications/proceedings-templates" target="_blank">ACM SIG Proceedings Template</a> page for paper templates in both Microsoft Word and LaTeX formats. LaTeX is the preferred template.<br>
             </p>
           </div>
